[con] Lock